# workers-sdk

./: .codeowners  .dockerignore  .editorconfig  .eslintrc  .eslintrc.js  .git-blame-ignore-revs  .gitattributes  .gitguardian.yml  .gitignore  .markdownlint.json  .mcp.json  .npmrc  .oxfmtrc.json  .oxfmtrc.jsonc  .oxlintrc.json  .oxlintrc.jsonc  .prettierignore  .prettierrc  .syncpackrc  AGENTS.md  CLAUDE.md  CODEOWNERS  CODEOWNERS-SECURITY-REVIEW.md  CODEOWNERS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  ISSUE_TRIAGE.md  LICENSE-APACHE  LICENSE-MIT  LOCAL_OBSERVABILITY_DEV_DOC.md  OBSERVABILITY-BRANCH.md  OBSERVABILITY.md  README.md  REVIEW.md  RFC-wrangler-compile.md  SECURITY.md  STYLEGUIDE.md  TODO.md  W  (+35 more)
.changeset/: 30e27f0a-a6d3-4809-bfb5-b9028083cc25.md  9fe64b13-19a1-42fd-b36f-70b538705f6a.md  README.md  access-probe-with-preview-token.md  access-service-token-support.md  account-id-mismatch-warning-v3.md  account-id-mismatch-warning.md  account-id-reachability-check.md  add-agents-md-to-templates.md  add-ai-search-commands.md  add-ai-search-oauth-scopes.md  add-ai-search-type-generation.md  add-artifacts-oauth-scope.md  add-cf-fetch-env-variable.md  add-cli-gitignore-helpers.md  add-codemod-package.md  add-d1-print-resource-location.md  add-email-workers-support.md  add-explorer-shortcut-vite.md  add-flagship-binding.md  add-generate-types-api.md  add-git-debug-logs.md  add-list-commands.md  add-list-workers-command.md  add-local-uploads-command.md  add-miniflare-purge-cache.md  add-pages-functions-package.md  add-pages-git-debug-logs.md  add-preview-commands.md  add-preview-output-entry.md  add-reauth-hint-to-account-errors.md  add-step-context.md  add-versions-upload-secrets-validation.md  add-vpc-named-network-services.md  add-web-search-binding.md  add-wrangler-cf-fetch-env.md  afraid-cooks-switch.md  afraid-cows-count.md  afraid-crabs-care.md  afraid-experts-take.md  (+5431 more)
.claude/: settings.json
.cursor/: mcp.json
.devcontainer/: devcontainer.json
.flue/: app.ts  tsconfig.json
.github/: bonk_reviewer.md  changeset-version.js  changeset-version.test.js  create-pr-prerelease.js  delete-pr-prerelease.js  dependabot.yml  extract-pr-and-workflow-id.js  extract-runtime-versions.mjs  generate-c3-dependabot-pr-changeset.mjs  generate-quarantine-issue.mjs  get-c3-dependabot-bumped-framework.cjs  holopin.yml  opencode.json  packaging.yml  pr-add-e2e-label.config.yml  pr-add-skip-pr-validation-label.config.yml  pr-labeler.config.yml  pull_request_template.md  quarantine-tests.mjs  renovate.json  sourcemap-url.js  version-script.js
.husky/: pre-push
.opencode/: opencode.jsonc  todo.md
docs/: commands.md  compare-v1-v2.md  configuration.md  custom-builds.md  deprecations.md  eject-webpack.md  environments.md  getting-started.md  migration.md  module-system.md  opencode.PR.md  opencode.PRD.md  opencode.SPEC.md  opencode.prompts.md  projects.md  v1-vs-v2.md  what's-new.md
e2e/: jest.config.mjs  package.json  setup.ts  teardown.ts  tsconfig.json
examples/: dep.js  index.js
fixtures/: index.mjs
foo/: README.md  pnpm-lock.yaml  tsconfig.json  vitest.config.ts
hello-ai/: package-lock.json  package.json  wrangler.toml
no-bundle-import/: package.json  wrangler.toml
patches/: @changesets__assemble-release-plan.patch  @cloudflare__component-listbox@1.10.6.patch  @netlify__build-info.patch  @netlify__build-info@10.5.1.patch  @types__ws@8.5.9.patch  capnp-ts@0.7.0.patch  (+19 more)
templates/examples/worker-to-text/: .gitignore  Cargo.toml  README.md  wrangler.toml
templates/examples/worker-to-text/src/: lib.rs
templates/experimental/worker-rust/: .gitignore  Cargo.toml  README.md  package.json  wrangler.toml
templates/experimental/worker-rust/src/: lib.rs
templates/worker-turso-rs/: .gitignore  Cargo.toml  README.md  triangle.toml  wrangler.toml
templates/worker-turso-rs/src/: lib.rs  utils.rs
(+2816 files in other folders)
